# snif

./: .gitignore  Cargo.toml  README.md
https-sniffer/: Cargo.toml  build.rs
https-sniffer-common/: Cargo.toml
https-sniffer-common/src/: data.rs
https-sniffer-ebpf/: Cargo.toml
https-sniffer-ebpf/src/: libc.rs  main.rs  openssl.rs  vmlinux.rs
https-sniffer/src/: collator.rs  main.rs
https-sniffer/tests/: integration.rs
lima/: provision.sh  snif.yml
snif/: Cargo.toml  build.rs
snif-common/: Cargo.toml
snif-common/src/: data.rs  lib.rs
snif-ebpf/: Cargo.toml
snif-ebpf/src/: libc.rs  openssl.rs
snif/src/: collator.rs  filter.rs  h1.rs  lib.rs  main.rs
snif/tests/: integration.rs
