[workspace]
members = ["snif", "snif-common", "snif-ebpf"]
resolver = "2"
default-members = ["snif", "snif-common"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
snif-common = { path = "./snif-common" }

[profile.release.package.snif-ebpf]
debug = 2
codegen-units = 1
