[package]
name = "https-sniffer-ebpf"
version.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf.workspace = true
aya-log-ebpf.workspace = true
https-sniffer-common.workspace = true

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "https-sniffer"
path = "src/main.rs"

[lints.rust]
static_mut_refs = "allow"
