[package]
name = "snif-ebpf"
version.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf.workspace = true
aya-log-ebpf.workspace = true
snif-common.workspace = true

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "snif"
path = "src/main.rs"

[lints.rust]
static_mut_refs = "allow"
