[package]
name = "snif"
version.workspace = true
edition.workspace = true

[dependencies]
aya.workspace = true
aya-log.workspace = true
clap = { version = "4.5", features = ["derive"] }
snif-common = { workspace = true, features = ["user"] }
anyhow = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = { version = "1.49", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "process",
    "time",
    "io-util",
] }
bytes = "1.11.0"
hpack = "0.3"
http = "1"
httparse = "1"
tokio-util = "0.7"


[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
cargo_metadata = "0.23.1"
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
snif-ebpf = { path = "../snif-ebpf" }

[dev-dependencies]
regex = "1"
rstest = "0.23"

[[bin]]
name = "snif"
path = "src/main.rs"
